# Haskell

1. Intro/1.2 Functions/: getMaxFromThree.hs  isZero.hs
1. Intro/1.3 Operators/: my_operator_spaceship.hs
src/1. Intro/1.2 Functions/: discount.hs  getMax.hs  sumSquares.hs
src/1. Intro/1.3 Operators/: my_operator_1.hs  my_operator_factorial.hs
src/equations/: equations.cabal  equations.cabal~
src/equations/src/: Linear.hs  Linear.hs~  Main.hs
