name:                equations
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/equations#readme
license:             BSD3
license-file:        LICENSE
author:              Sergey
maintainer:          pmswga@gmail.com
copyright:           2021 Author: pmswga
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable equations
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
